# rust-in-action

./: .gitignore
c0102-penguins/: Cargo.toml
c0102-penguins/src/: main.rs
c0202-first-steps/: Cargo.toml
c0203-intro-to-numbers/: Cargo.toml
c0207-mandelbrot/: Cargo.toml
c0207-mandelbrot/src/: main.rs
c0211-grep-lite/: Cargo.toml
c0211-grep-lite/src/: main.rs
c0302-mock-file/: Cargo.toml
c0302-mock-file/src/: main.rs
c0401-check-sats/: Cargo.toml
c0401-check-sats/src/: main.rs
c0502-f32-as-u32/: Cargo.toml
c0502-f32-as-u32/src/: main.rs
c0503-to-oblivion/: Cargo.toml
c0505-impossible-addition/: Cargo.toml
c0510-visualizing-f32/: Cargo.toml
c0510-visualizing-f32/src/: main.rs
c0511-q7/: Cargo.toml
c0511-q7/src/: main.rs
c0518-cpu/: Cargo.toml
c0518-cpu/src/: main.rs
c0608-particles/: Cargo.toml  alloc.tsv
c0608-particles/src/: main.rs
c0608-particles/tools/: alloc.plot
c0701-serde-eg/: Cargo.toml
c0701-serde-eg/src/: main.rs
c0706-actionkv/: Cargo.toml
c0706-actionkv/src/: akv_mem.rs  lib.rs
c0810-error-handle/: Cargo.toml
c0810-error-handle/src/: main.rs
c0819-mget/: Cargo.toml
c0819-mget/src/: ethernet.rs  main.rs
c0910-clock/: Cargo.toml
c0910-clock/src/: main.rs
c1004-multijoin/: Cargo.toml  draw.plot  run.sh
c1005-busythread/: Cargo.toml
c1005-busythread/src/: main.rs
c1017-render-hex/: Cargo.toml  run.sh
c1017-render-hex/src/: main.rs
c1101-fledge-os/: Cargo.toml  init-centos.sh  init-ubuntu.sh
c1101-fledge-os/src/: main.rs
c1216-longjump/: Cargo.toml
c1216-longjump/src/: main.rs
(+1 files in other folders)
