[package]
name = "c0819-mget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-v3 = "3.0.0-beta.1"
rand = "0.8.5"
smoltcp = {version = "0.6", features=["proto-igmp", "proto-ipv4", "verbose", "log"]}
trust-dns = {version = "0.16", default-features = false}
url = "2.3.1"
