[package]
name = "c1101-fledge-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9"
x86_64 = "0.14.10"

# bootimage 扩展的配置
[package.metadata.bootimage]
# 使用 cargo build 而不是 xbuild 进行编译
build-command = ["build"]

# 替换 cargo run 的默认行为
run-command = [
    "qemu-system-x86_64", "-drive", "format=raw,if=ide,index=0,media=disk,file={}", 
]
